--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
-body {
-    width: 100%;
+html, body {
     height: 100%;
-}
-
-html {
     width: 100%;
-    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    font-family:'Ubuntu', sans-serif !important;
 }
 
 .intro-section {
@@ -13,6 +11,7 @@ html {
     padding-top: 150px;
     text-align: center;
     background: #FAAB54;
+    color: #fff;
 }
 
 .germany-section {
@@ -37,24 +36,20 @@ html {
 }
 
 .header h2 {
-    font-size: ;
-    font-family:'Ubuntu', sans-serif;;
-}
-
-.fo-search {
-    padding-top: 300px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 #circle1 {
     position: absolute;
     top: -200px;
-    right: -120px;
-    width: 400px;
+    right: 0px;
+    width: 200px;
     height: 400px;
     background: #275996;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
+    -moz-border-radius: 0px 200px 0px 200px;
+    -webkit-border-radius: 0px 200px 0px 200px;
+    border-radius: 0px 200px 0px 200px;
 }
 
 #circle2 {
@@ -71,20 +66,19 @@ html {
 
 .logo {
     width: 300px;
-    position: top left;
 }
 
 .dots {
     position: relative;
     float: top;
     z-index: 1;
-    margin-left: -100px;
-    margin-top: -100px;
+    margin-left: -50px;
+    margin-top: -175px;
 }
 
 .tagline {
     position: relative;
-    margin: -250px 150px 0px 150px;
+    margin-top: -150px;
     text-align: left;
     color: white;
 }
@@ -95,7 +89,92 @@ html {
     font-size: 100px;
 }
 
+.scroll:hover {
+    /*box-shadow: 0 0 5px rgba(81, 203, 238, 1);*/
+    padding: 0px 0px 3px 3px;
+    margin: 5px 1px 3px 0px;
+    /*border: 1px solid rgba(81, 203, 238, 1);*/
+}
+
 .fo-search {
     width: 300px !important;
 }
 
+.navbar-brand {
+    height: 40px;
+    width: 120px;
+    background-image: url('/img/orangelogo.svg');
+}
+
+.white {
+    color: #fff;
+}
+
+.germany {
+    margin: 0px 200px;
+}
+
+.big {
+    font-size: 100px;
+}
+
+.control-label {
+    font-size: 25px;
+    margin-top: -10px;
+}
+
+.form-horizontal {
+    padding-top: 20px;
+}
+
+.separator {
+    margin-top: -100px;
+    margin-left: -50px;
+    margin-right: 270px;
+}
+
+#germany p {
+    color: #fff;
+    text-align: left;
+    padding-right: 40px;
+}
+
+#egypt p {
+    text-align: left;
+    padding-right: 40px;
+}
+
+#germany img {
+    height: 400px;
+    margin-top: -500px;
+}
+
+#egypt img {
+    height: 400px;
+    margin-left: -250px;
+}
+
+.black {
+    color: black;
+}
+
+p {
+    font-size: 16px;
+}
+
+textarea {
+    resize: none;
+}
+
+a {
+    color: #fff;
+}
+
+a:hover {
+    color: #275996;
+    text-decoration: none;
+}
+
+.copyright {
+    bottom: -200px;
+}
