--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,6 @@ html, body {
 .navbar-brand {
     height: 40px;
     width: 120px;
-    background-image: url('/img/orangelogo.svg');
 }
 
 .white {
@@ -175,6 +174,48 @@ a:hover {
     text-decoration: none;
 }
 
-.copyright {
-    bottom: -200px;
+.left {
+    text-align: left;
+}
+
+.resize {
+    height: 400px;
+}
+
+.big-pic {
+    height: 1000px;
+    margin-top: -300px;
+    margin-left: -250px;
+    z-index: -1;
+}
+
+footer {
+    height: 50px;
+    position: absolute;
+    float: bottom;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+footer ul {
+  width: 100%;
+  border: 1px solid black;
+
+}
+
+footer ul li {
+  display: inline;
+}
+
+#walk-line {
+   overflow-y: hidden;
+}
+
+.sorta-big {
+    font-size: 65px;
+}
+
+.small {
+    height: 400px;
 }
