--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ html, body {
 
 .tagline {
     position: relative;
-    margin-top: -150px;
+    margin-top: -25%;
     text-align: left;
     color: white;
 }
